+jenkins:新增jenkins启动参数